# mission-control

./: .gitignore  CMUX-SPEC.md  README.md  REFACTOR-PLAN.md  bugs.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git.rs  lib.rs  main.rs  naming.rs  notifications.rs  projects.rs  pty.rs  session.rs  status.rs
src/components/: FocusMode.tsx  HelpOverlay.tsx  KillConfirmDialog.tsx  NewSessionModal.tsx  Overview.tsx  SessionCell.tsx  SessionPill.tsx  SidePanel.tsx  StatusBar.tsx  Terminal.tsx  TitleBar.tsx
src/hooks/: useHotkeys.ts  usePty.ts  useSession.ts
src/lib/: colors.ts  tauri.ts
