[package]
name = "c-mux"
version = "0.1.0"
edition = "2021"

[lib]
name = "cmux_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "c-mux"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
regex = "1"
dirs = "5"
nix = { version = "0.29", features = ["signal", "process"] }
log = "0.4"
env_logger = "0.11"
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
